fixed cancel button on mobile view

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -566,7 +566,7 @@ input#signupbutton{
   }
 
   input#signupbutton{
-    margin-top: 20px;
+    // margin-top: 20px;
   }
 
   div.col-sm-5{
